--- a/pages/add_cart.html
+++ b/pages/add_cart.html
@@ -477,7 +477,7 @@
 
     function PlaceOrder() {
       //var url = "http://localhost/project/FlavorFiest/";
-      var url = "http://flavour-fiest.free.nf/";
+      var url = "https://akilanilusha.github.io/mail/";
       const PayForm = document.forms['PayDetailForm'];
       var f_name = PayForm['f_name'].value;
       let l_name = PayForm['l_name'].value;
