--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
 
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous"> <!--Bootstarop css -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> <!--Font Awesome-->
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <!--Bootstarop css -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <!--Font Awesome-->
   <title>Flavor Fiest | HOME</title>
   <link rel="stylesheet" href="style.css">
 
@@ -47,7 +49,7 @@
         <div class="col-md-4 col-sm-8 ">
           <h1 class="site-name text-center ">Flavor Fiest</h1>
         </div>
-        <div class="col-md-4 d-flex justify-content-end" >
+        <div class="col-md-4 d-flex justify-content-end">
           <div class="signinDiv text-center">
             <a href=./pages/login.html>Sign in</a>
           </div>
@@ -274,34 +276,43 @@
         </div>
 
         <div class="col-md-6 p-0 offer-div"> <!-- Set the desired height here -->
-          <div id="carouselExampleIndicators" class="carousel slide h-100 w-100" data-bs-ride="carousel" data-bs-interval="3000">
+          <div id="carouselExampleIndicators" class="carousel slide h-100 w-100" data-bs-ride="carousel"
+            data-bs-interval="3000">
             <div class="carousel-indicators">
-              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
+                aria-current="true" aria-label="Slide 1"></button>
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+                aria-label="Slide 2"></button>
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+                aria-label="Slide 3"></button>
             </div>
             <div class="carousel-inner h-100">
               <div class="carousel-item active h-100">
-                <img src="./assets/img/home_page/offer/img1.jpg" class="d-block w-100 h-100" style="object-fit: cover; "alt="...">
+                <img src="./assets/img/home_page/offer/img1.jpg" class="d-block w-100 h-100" style="object-fit: cover; "
+                  alt="...">
               </div>
               <div class="carousel-item h-100">
-                <img src="./assets/img/home_page/offer/img2.jpg" class="d-block w-100 h-100" style="object-fit: cover; height: 100%;" alt="...">
+                <img src="./assets/img/home_page/offer/img2.jpg" class="d-block w-100 h-100"
+                  style="object-fit: cover; height: 100%;" alt="...">
               </div>
               <div class="carousel-item h-100">
-                <img src="./assets/img/home_page/offer/img3.jpg" class="d-block w-100 h-100" style="object-fit: cover; height: 100%;" alt="...">
+                <img src="./assets/img/home_page/offer/img3.jpg" class="d-block w-100 h-100"
+                  style="object-fit: cover; height: 100%;" alt="...">
               </div>
             </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+              data-bs-slide="prev">
               <span class="carousel-control-prev-icon" aria-hidden="true"></span>
               <span class="visually-hidden">Previous</span>
             </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+              data-bs-slide="next">
               <span class="carousel-control-next-icon" aria-hidden="true"></span>
               <span class="visually-hidden">Next</span>
             </button>
           </div>
         </div>
-        
+
       </div>
     </div>
 
@@ -325,9 +336,9 @@
 
               <h5 class="mb-0">Akila Nilusha</h5>
               <!-- <span>Software Developer</span> -->
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-                ex ea commodo consequat.</p>
+              <p>"Placing my order online was a breeze! The website was easy to navigate, and I received my confirmation
+                email immediately. The food arrived hot and fresh, and everything was exactly as I ordered. Highly
+                recommend!"</p>
 
             </div>
 
@@ -336,6 +347,8 @@
               <i class="fa fa-star"></i>
               <i class="fa fa-star"></i>
               <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+
 
             </div>
 
@@ -348,18 +361,18 @@
 
             <div class="user-image">
 
-              <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQSuFhULeO7UdYRQz3spoAbnazI0Zebr6ivyg&s"
+              <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRyrax7Fv_O4DkRvIgElaJq5CNh8x5XcixMww&s"
                 class="rounded-circle" width="80">
 
             </div>
 
             <div class="user-content">
 
-              <h5 class="mb-0">Akila Nilusha</h5>
+              <h5 class="mb-0">Indusara Deshanjana</h5>
               <!-- <span>Web Developer</span> -->
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-                ex ea commodo consequat.</p>
+              <p>"The online ordering system is quite convenient. I loved being able to customize my meal. The only
+                issue was that my order arrived a bit later than the estimated time. Overall, the food was delicious,
+                and I'll definitely order again!"</p>
 
             </div>
 
@@ -382,18 +395,18 @@
 
             <div class="user-image">
 
-              <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQSuFhULeO7UdYRQz3spoAbnazI0Zebr6ivyg&s"
+              <img src="https://images.remotehub.com/08c566de587d11edb2f842277387b298/180x180/4a8c6672.jpg?version=1667152964"
                 class="rounded-circle" width="80">
 
             </div>
 
             <div class="user-content">
 
-              <h5 class="mb-0">Akila Nilusha</h5>
+              <h5 class="mb-0">Ashoka Gayan</h5>
               <!-- <span>Software Architect</span> -->
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-                ex ea commodo consequat.</p>
+              <p>"I had some trouble with the online ordering process; the website was slow to load. Once I got my order
+                in, it took longer than expected to arrive. The food was tasty, but I hope the online experience
+                improves for next time."</p>
 
             </div>
 
@@ -402,6 +415,8 @@
               <i class="fa fa-star"></i>
               <i class="fa fa-star"></i>
               <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+
 
             </div>
 
