--- a/pages/add_cart.html
+++ b/pages/add_cart.html
@@ -514,12 +514,13 @@
 
     function clearStoreage() {
       localStorage.clear();
-      location.reload()
+      // Delay the reload to allow modal to show
+      setTimeout(function () {
+        location.reload();
+      }, 3000); // 3 seconds delay before reloading
     }
 
     function PlaceOrder() {
-      // var url = "http://localhost/project/FlavorFiest/";
-
       const PayForm = document.forms['PayDetailForm'];
       var f_name = PayForm['f_name'].value;
       let l_name = PayForm['l_name'].value;
@@ -554,23 +555,26 @@
 
           var successModal = new bootstrap.Modal(document.getElementById('success_tic'));
           successModal.show();
+
+       
+          setTimeout(function () {
+            clearStoreage(); 
+          }, 2000);  
+
         },
         error: function (xhr, status, error) {
-
-          // alert("Can't Place Order. Please Wait And Try Again");
-
           console.log("Request failed!");
           console.log("Status: " + status);
           console.log("Error: " + error);
-          // $('#waitingModal').modal('hide');
-          $('#waitingModal').modal('hide');
-        }
 
+          $('#waitingModal').modal('hide');
+          clearStoreage();
+        }
       });
-      showAlert();
 
       return false;
     }
+
 
     function errorModel() {
     }
